--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,7 +6,7 @@ repository: https://github.com/knoxpo/dart_algolia
 homepage: https://www.algolia.com/doc/guides/building-search-ui/troubleshooting/faq/ios/#does-algolia-support-dart-and-flutter
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=3.2.0-0 <4.0.0'
 
 dependencies:
   meta: ^1.6.0
@@ -15,6 +15,6 @@ dependencies:
   universal_io: ^2.0.4
 
 dev_dependencies:
-  lints: ^1.0.1
+  lints: ^5.0.0
   test: ^1.17.12
   dotenv: ^3.0.0
